aws/SecurityGroups-us-west-1.json
{
 "SecurityGroups": [
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "default VPC security group", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [], 
     "UserIdGroupPairs": [
      {
       "UserId": "118292266645", 
       "GroupId": "sg-046eed62"
      }
     ], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "default", 
   "VpcId": "vpc-1dc49479", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-046eed62"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "default VPC security group", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ]
    }
   ], 
   "GroupName": "default", 
   "VpcId": "vpc-72850617", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-04725661"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "launch-wizard-1 created 2017-09-13T15:40:35.261-07:00", 
   "IpPermissions": [
    {
     "PrefixListIds": [], 
     "FromPort": 22, 
     "IpRanges": [
      {
       "CidrIp": "38.140.26.42/32"
      }
     ], 
     "ToPort": 22, 
     "IpProtocol": "tcp", 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "launch-wizard-1", 
   "VpcId": "vpc-72850617", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-0c7bf86a"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "Security group for intentionet-dev RDS", 
   "IpPermissions": [
    {
     "PrefixListIds": [], 
     "FromPort": 3306, 
     "IpRanges": [
      {
       "CidrIp": "104.236.156.171/32"
      }, 
      {
       "CidrIp": "104.236.167.119/32"
      }
     ], 
     "ToPort": 3306, 
     "IpProtocol": "tcp", 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "intentionet-dev", 
   "VpcId": "vpc-72850617", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-40ac0727"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "My security group", 
   "IpPermissions": [
    {
     "PrefixListIds": [], 
     "FromPort": 22, 
     "IpRanges": [
      {
       "CidrIp": "38.140.26.42/32"
      }
     ], 
     "ToPort": 22, 
     "IpProtocol": "tcp", 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "my-security-group", 
   "VpcId": "vpc-1dc49479", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-ae70f3c8"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "Created from the RDS Management Console", 
   "IpPermissions": [
    {
     "PrefixListIds": [], 
     "FromPort": 3306, 
     "IpRanges": [
      {
       "CidrIp": "76.80.38.42/32"
      }
     ], 
     "ToPort": 3306, 
     "IpProtocol": "tcp", 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "rds-launch-wizard", 
   "VpcId": "vpc-72850617", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-b91c3cde"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "Security group for intentionet-web RDS", 
   "IpPermissions": [
    {
     "PrefixListIds": [], 
     "FromPort": 3306, 
     "IpRanges": [
      {
       "CidrIp": "162.243.144.192/32"
      }
     ], 
     "ToPort": 3306, 
     "IpProtocol": "tcp", 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "intentionet-web", 
   "VpcId": "vpc-72850617", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-d1ad06b6"
  }, 
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "Security group for intentionet-test RDS", 
   "Tags": [
    {
     "Value": "intentionet-test", 
     "Key": "Name"
    }
   ], 
   "IpPermissions": [
    {
     "PrefixListIds": [], 
     "FromPort": 3306, 
     "IpRanges": [
      {
       "CidrIp": "107.170.243.58/32"
      }
     ], 
     "ToPort": 3306, 
     "IpProtocol": "tcp", 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "intentionet-test", 
   "VpcId": "vpc-72850617", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-fefede99"
  }
 ]
}
